-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0
-
None
C:/repo/mingw-w64-qt-creator/src/qt-creator-opensource-src-3.0.0-rc1/src/plugins/ios/iosdebugsupport.cpp:165:68: error: cast from 'Q_PID {aka _PROCESS_INFORMATION*}' to 'int' loses precision [-fpermissive] m_runControl->engine()->notifyEngineRemoteSetupDone(int(pid), m_qmlPort);
For Gerrit Dashboard: QTCREATORBUG-11026 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
73437,2 | Fix compilation of ios plugin with Windows 64 bit | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |