Fix compilation of ios plugin with Windows 64 bit

Q_PID is a pointer under windows, and the compiler won't allow us
to convert a 64 bit pointer to int.

Task-number: QTCREATORBUG-11026
Change-Id: I34e45bf2ef1e565c5967fac6b482c14117a04578
Reviewed-by: Eike Ziller <eike.ziller@digia.com>